--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>My first Web Page</titile>
+		<title>My first Web Page</title>
 	</head>
 	<body>
 		<h1>This is my first web page.Oh, I'm excited!!!</h1>
